<resources>
    <string name="app_name">Wildcat Mobile</string>
    <string name="toolbar_title">Wildcat Mobile</string>
    <string name="schedule_toolbar_title">Wildcat Mobile - Calendar</string>
    <string name="classes_toolbar_title">Wildcat Mobile - Classes</string>
    <string name="none_specified">None specified</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text_view_temp">Intro text temp</string>
    <string name="announcements_tab">Announcements</string>
    <string name="articlesvideos_tab">Articles &amp; Videos</string>
    <string name="academics_tab">Student Life</string>
    <string name="schedule_button">Schedule</string>
    <string name="teachers_button">Teachers</string>
    <string name="classes_button">Classes</string>
    <string name="library_button">Library</string>
    <string name="basic_fragment">Lorem Ipsum</string>
    <string name="schedule_title">Calendar</string>
    <string name="wellness_tab">Wellness</string>
    <string name="extracurricular_tab">Extracurricular</string>
    <string name="settings_tab">Settings</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="author_sample_text">Author sample text</string>
    <string name="calendar_tab">Calendar</string>
    <string name="clubs_tab">Clubs</string>
    <string name="teachers_tab">Teachers</string>
    <string name="sponsor_sample_text">Sponsor sample text</string>
    <string name="ip_address_hint">IP Address</string>
    <string name="port_hint">Port</string>
    <string name="refresh_connection_button">Refresh</string>
    <string name="pluslayoutheader">PLUS Schedule</string>
    <string name="create_event">Create Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="event_tools_title_create">Create an Event</string>
    <string name="event_tools_title_delete">Delete an Event</string>
    <string name="event_tools_title_edit">Edit an Event</string>
    <string name="event_tools_edit_title">Enter the event\'s title</string>
    <string name="event_tools_edit_desc">Enter the event\'s description</string>
    <string name="event_tools_edit_date">Enter the event\'s date</string>
    <string name="event_tools_pick_date">Select Date</string>
    <string name="default_plus">A+1</string>
    <string name="birthday">Birthday</string>
    <string name="test_exam">Test</string>
    <string name="test_quiz">Quiz</string>
    <string name="homework_general">Homework</string>
    <string name="homework_project">Project</string>
    <string name="other_general">Other</string>
    <string name="no_date_selected">No date selected</string>
    <string name="crisis">Crisis</string>
    <string name="classes_first">1</string>
    <string name="classes_second">2</string>
    <string name="classes_third">3</string>
    <string name="classes_forth">4</string>
    <string name="classes_fifth">5</string>
    <string name="classes_sixth">6</string>
    <string name="classes_seventh">7</string>
    <string name="classes_first_hint">First period</string>
    <string name="classes_second_hint">Second period</string>
    <string name="classes_third_hint">Third period</string>
    <string name="classes_forth_hint">Forth period</string>
    <string name="classes_fifth_hint">Fifth period</string>
    <string name="classes_sixth_hint">Sixth period</string>
    <string name="classes_seventh_hint">Seventh period</string>
    <string name="classes_warning">You have unsaved changes. Do you want your changes saved?</string>
    <string name="classes_save_and_exit">Save changes and exit.</string>
    <string name="classes_discard_and_exit">Discard changes and exit.</string>
    <string name="classes_cancel">Cancel.</string>

</resources>
