<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_warning"
            android:src="@android:drawable/ic_dialog_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/text_view_warning"
            android:text="@string/classes_warning"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_classes_warning_save_and_exit"
        android:text="@string/classes_save_and_exit"
        android:textColor="@drawable/button_text_color_green"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/button_classes_warning_discard_and_exit"
        android:text="@string/classes_discard_and_exit"
        android:textColor="@drawable/button_text_color_green"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"/>

    <Button
        android:id="@+id/button_classes_warning_cancel"
        android:text="@string/classes_cancel"
        android:textColor="@drawable/button_text_color_green"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>